Adding the ability to search by display_name
